test/tests/stages/18_structures/invalid_parse/extra_credit/union_member_is_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[11]:
  union
  identifier(s)
  {
  int
  identifier(foo)
  (
  void
  )
  ;
  }
  ;
